@@ -13,11 +13,11 @@ import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
-import static com.farao_community.farao.data.crac_api.Instant.*;
 import static com.farao_community.farao.data.crac_creation.creator.csa_profile.crac_creator.CsaProfileCracCreationTestUtil.getCsaCracCreationContext;
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class FlowCnecCreationTest {
     @Test
@@ -35,7 +35,7 @@ class FlowCnecCreationTest {
         Iterator<UsageRule> usageRuleIterator = eliaRa1.getUsageRules().iterator();
         UsageRule usageRule1 = usageRuleIterator.next();
 
-        assertEquals(CURATIVE, usageRule1.getInstant());
+        assertEquals("curative", usageRule1.getInstant().getId());
         assertEquals("ELIA_AE1 - ELIA_CO1 - curative", ((OnFlowConstraintImpl) usageRule1).getFlowCnec().getId());
         // TODO assert that UsageMethod.FORCED
         // assertEquals(UsageMethod.FORCED, usageRule1.getUsageMethod());
@@ -114,7 +114,7 @@ class FlowCnecCreationTest {
             "RTE_AE1 - RTE_CO1 - curative",
             "RTE_AE1 - RTE_CO1 - curative",
             "60038442-5c02-21a9-22ad-f0554a65a466",
-            CURATIVE,
+            "curative",
             "6c9656a6-84c2-4967-aabc-51f63a7abdf1",
             1000.,
             -1000.,
@@ -124,7 +124,7 @@ class FlowCnecCreationTest {
             "RTE_AE1 - preventive",
             "RTE_AE1 - preventive",
             "60038442-5c02-21a9-22ad-f0554a65a466",
-            PREVENTIVE,
+            "preventive",
             null,
             1000.,
             -1000.,
@@ -134,7 +134,7 @@ class FlowCnecCreationTest {
             "RTE_AE2 - RTE_CO2 - curative",
             "RTE_AE2 - RTE_CO2 - curative",
             "65e9a6a7-8488-7b17-6344-cb7d61b7920b",
-            CURATIVE,
+            "curative",
             "410a7075-51df-4c5c-aa80-0bb1bbe41190",
             1000.,
             -1000.,
@@ -144,7 +144,7 @@ class FlowCnecCreationTest {
             "RTE_AE2 - preventive",
             "RTE_AE2 - preventive",
             "65e9a6a7-8488-7b17-6344-cb7d61b7920b",
-            PREVENTIVE,
+            "preventive",
             null,
             1000.,
             -1000.,
@@ -157,17 +157,17 @@ class FlowCnecCreationTest {
         CsaProfileCracCreationTestUtil.assertNetworkActionImported(cracCreationContext, "f17a745b-60a1-4acd-887f-ebc8349b4597", Set.of("50719289-6406-4d69-9dd7-6de60aecd2d4"), true, 2);
         CsaProfileCracCreationTestUtil.assertNetworkActionImported(cracCreationContext, "a8f21a9a-49dc-4c2a-9745-405392f0d87b", Set.of("468fdb4a-49d6-4ea9-b216-928d057b65f0"), false, 2);
 
-        CsaProfileCracCreationTestUtil.assertHasOnFlowConstraintUsageRule(cracCreationContext, "6c283463-9aac-4d9b-9d0b-6710c5b2aa00", "RTE_AE1 - preventive", PREVENTIVE, UsageMethod.TO_BE_EVALUATED); // TODO change TO_BE_EVALUATED by AVAILABLE
-        CsaProfileCracCreationTestUtil.assertHasOnFlowConstraintUsageRule(cracCreationContext, "6c283463-9aac-4d9b-9d0b-6710c5b2aa00", "RTE_AE1 - RTE_CO1 - curative", PREVENTIVE, UsageMethod.TO_BE_EVALUATED);
+        CsaProfileCracCreationTestUtil.assertHasOnFlowConstraintUsageRule(cracCreationContext, "6c283463-9aac-4d9b-9d0b-6710c5b2aa00", "RTE_AE1 - preventive", "preventive", UsageMethod.TO_BE_EVALUATED); // TODO change TO_BE_EVALUATED by AVAILABLE
+        CsaProfileCracCreationTestUtil.assertHasOnFlowConstraintUsageRule(cracCreationContext, "6c283463-9aac-4d9b-9d0b-6710c5b2aa00", "RTE_AE1 - RTE_CO1 - curative", "preventive", UsageMethod.TO_BE_EVALUATED);
 
-        CsaProfileCracCreationTestUtil.assertHasOnFlowConstraintUsageRule(cracCreationContext, "0af9ce7e-8013-4362-96a0-40ac0a970eb6", "RTE_AE2 - preventive", PREVENTIVE, UsageMethod.TO_BE_EVALUATED); // TODO change TO_BE_EVALUATED by AVAILABLE
-        CsaProfileCracCreationTestUtil.assertHasOnFlowConstraintUsageRule(cracCreationContext, "0af9ce7e-8013-4362-96a0-40ac0a970eb6", "RTE_AE2 - RTE_CO2 - curative", PREVENTIVE, UsageMethod.TO_BE_EVALUATED);
+        CsaProfileCracCreationTestUtil.assertHasOnFlowConstraintUsageRule(cracCreationContext, "0af9ce7e-8013-4362-96a0-40ac0a970eb6", "RTE_AE2 - preventive", "preventive", UsageMethod.TO_BE_EVALUATED); // TODO change TO_BE_EVALUATED by AVAILABLE
+        CsaProfileCracCreationTestUtil.assertHasOnFlowConstraintUsageRule(cracCreationContext, "0af9ce7e-8013-4362-96a0-40ac0a970eb6", "RTE_AE2 - RTE_CO2 - curative", "preventive", UsageMethod.TO_BE_EVALUATED);
 
-        CsaProfileCracCreationTestUtil.assertHasOnFlowConstraintUsageRule(cracCreationContext, "f17a745b-60a1-4acd-887f-ebc8349b4597", "RTE_AE2 - preventive", PREVENTIVE, UsageMethod.TO_BE_EVALUATED); // TODO change TO_BE_EVALUATED by AVAILABLE
-        CsaProfileCracCreationTestUtil.assertHasOnFlowConstraintUsageRule(cracCreationContext, "f17a745b-60a1-4acd-887f-ebc8349b4597", "RTE_AE2 - RTE_CO2 - curative", PREVENTIVE, UsageMethod.TO_BE_EVALUATED);
+        CsaProfileCracCreationTestUtil.assertHasOnFlowConstraintUsageRule(cracCreationContext, "f17a745b-60a1-4acd-887f-ebc8349b4597", "RTE_AE2 - preventive", "preventive", UsageMethod.TO_BE_EVALUATED); // TODO change TO_BE_EVALUATED by AVAILABLE
+        CsaProfileCracCreationTestUtil.assertHasOnFlowConstraintUsageRule(cracCreationContext, "f17a745b-60a1-4acd-887f-ebc8349b4597", "RTE_AE2 - RTE_CO2 - curative", "preventive", UsageMethod.TO_BE_EVALUATED);
 
-        CsaProfileCracCreationTestUtil.assertHasOnFlowConstraintUsageRule(cracCreationContext, "a8f21a9a-49dc-4c2a-9745-405392f0d87b", "RTE_AE1 - RTE_CO1 - curative", CURATIVE, UsageMethod.TO_BE_EVALUATED); // TODO change TO_BE_EVALUATED by AVAILABLE
-        CsaProfileCracCreationTestUtil.assertHasOnFlowConstraintUsageRule(cracCreationContext, "a8f21a9a-49dc-4c2a-9745-405392f0d87b", "RTE_AE2 - RTE_CO2 - curative", CURATIVE, UsageMethod.TO_BE_EVALUATED);
+        CsaProfileCracCreationTestUtil.assertHasOnFlowConstraintUsageRule(cracCreationContext, "a8f21a9a-49dc-4c2a-9745-405392f0d87b", "RTE_AE1 - RTE_CO1 - curative", "curative", UsageMethod.TO_BE_EVALUATED); // TODO change TO_BE_EVALUATED by AVAILABLE
+        CsaProfileCracCreationTestUtil.assertHasOnFlowConstraintUsageRule(cracCreationContext, "a8f21a9a-49dc-4c2a-9745-405392f0d87b", "RTE_AE2 - RTE_CO2 - curative", "curative", UsageMethod.TO_BE_EVALUATED);
     }
 
     @Test
@@ -184,25 +184,25 @@ class FlowCnecCreationTest {
             "RTE_AE - RTE_CO1 - curative",
             "RTE_AE - RTE_CO1 - curative",
             "FFR3AA1--FFR5AA1--1",
-            CURATIVE, "0451f8be-83d7-45da-b80b-4014259ff624",
+            "curative", "0451f8be-83d7-45da-b80b-4014259ff624",
             +1000., -1000., Side.RIGHT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(1),
             "RTE_AE - RTE_CO3 - curative",
             "RTE_AE - RTE_CO3 - curative",
             "FFR3AA1--FFR5AA1--1",
-            CURATIVE, "4491d904-93c4-41d4-a509-57f9fed2e31c",
+            "curative", "4491d904-93c4-41d4-a509-57f9fed2e31c",
             +1000., -1000., Side.RIGHT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(2),
             "RTE_AE - preventive",
             "RTE_AE - preventive",
             "FFR3AA1--FFR5AA1--1",
-            PREVENTIVE, null,
+            "preventive", null,
             +1000., -1000., Side.RIGHT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(3),
             "RTE_AE2 - preventive",
             "RTE_AE2 - preventive",
             "FFR3AA1--FFR5AA1--1",
-            PREVENTIVE, null,
+            "preventive", null,
             +1000., -1000., Side.RIGHT);
     }
 
@@ -222,25 +222,25 @@ class FlowCnecCreationTest {
             "ELIA_AE1 - ELIA_CO1 - curative",
             "ELIA_AE1 - ELIA_CO1 - curative",
             "ffbabc27-1ccd-4fdc-b037-e341706c8d29",
-            CURATIVE, "493480ba-93c3-426e-bee5-347d8dda3749",
+            "curative", "493480ba-93c3-426e-bee5-347d8dda3749",
             +1312., -1312., Side.LEFT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(1),
             "ELIA_AE1 - preventive",
             "ELIA_AE1 - preventive",
             "ffbabc27-1ccd-4fdc-b037-e341706c8d29",
-            PREVENTIVE, null,
+            "preventive", null,
             +1312., -1312., Side.LEFT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(2),
             "TENNET_TSO_AE1NL - TENNET_TSO_CO1 - curative",
             "TENNET_TSO_AE1NL - TENNET_TSO_CO1 - curative",
             "b18cd1aa-7808-49b9-a7cf-605eaf07b006 + e8acf6b6-99cb-45ad-b8dc-16c7866a4ddc",
-            CURATIVE, "c0a25fd7-eee0-4191-98a5-71a74469d36e",
+            "curative", "c0a25fd7-eee0-4191-98a5-71a74469d36e",
             +1876., -1876., Side.RIGHT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(3),
             "TENNET_TSO_AE1NL - preventive",
             "TENNET_TSO_AE1NL - preventive",
             "b18cd1aa-7808-49b9-a7cf-605eaf07b006 + e8acf6b6-99cb-45ad-b8dc-16c7866a4ddc",
-            PREVENTIVE, null,
+            "preventive", null,
             +1876., -1876., Side.RIGHT);
 
         // csa-9-1
@@ -258,79 +258,79 @@ class FlowCnecCreationTest {
         assertEquals(12, cracCreationContext.getCrac().getFlowCnecs().size());
 
         List<FlowCnec> listFlowCnecs = cracCreationContext.getCrac().getFlowCnecs()
-            .stream().sorted(Comparator.comparing(FlowCnec::getId)).collect(Collectors.toList());
+            .stream().sorted(Comparator.comparing(FlowCnec::getId)).toList();
 
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(0),
             "ELIA_AE2 - preventive",
             "ELIA_AE2 - preventive",
             "b58bf21a-096a-4dae-9a01-3f03b60c24c7",
-            PREVENTIVE, null,
+            "preventive", null,
             +1574d, -1574d, Side.RIGHT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(1),
             "REE_AE1 - REE_CO1 - curative",
             "REE_AE1 - REE_CO1 - curative",
             "891e77ff-39c6-4648-8eda-d81f730271f9 + a04e4e41-c0b4-496e-9ef3-390ea089411f",
-            CURATIVE, "8cdec4c6-10c3-40c1-9eeb-7f6ae8d9b3fe",
+            "curative", "8cdec4c6-10c3-40c1-9eeb-7f6ae8d9b3fe",
             +1000d, -1000d, Side.RIGHT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(2),
             "REE_AE1 - preventive",
             "REE_AE1 - preventive",
             "891e77ff-39c6-4648-8eda-d81f730271f9 + a04e4e41-c0b4-496e-9ef3-390ea089411f",
-            PREVENTIVE, null,
+            "preventive", null,
             +1000d, -1000d, Side.RIGHT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(3),
             "REE_AE2 - REE_CO2 - curative",
             "REE_AE2 - REE_CO2 - curative",
             "044cd003-c766-11e1-8775-005056c00008",
-            CURATIVE, "b6b780cb-9fe5-4c45-989d-447a927c3874",
+            "curative", "b6b780cb-9fe5-4c45-989d-447a927c3874",
             +1000d, -1000d, Side.LEFT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(4),
             "REE_AE2 - preventive",
             "REE_AE2 - preventive",
             "044cd003-c766-11e1-8775-005056c00008",
-            PREVENTIVE, null,
+            "preventive", null,
             +1000d, -1000d, Side.LEFT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(5),
             "REE_AE3 - REE_CO3 - auto",
             "REE_AE3 - REE_CO3 - auto",
             "048badc5-c766-11e1-8775-005056c00008",
-            AUTO, "13334fdf-9cc2-4341-adb6-1281269040b4",
+            "auto", "13334fdf-9cc2-4341-adb6-1281269040b4",
             +500.0, -500.0, Side.LEFT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(6),
             "REE_AE3 - preventive",
             "REE_AE3 - preventive",
             "048badc5-c766-11e1-8775-005056c00008",
-            PREVENTIVE, null,
+            "preventive", null,
             +500d, -500d, Side.LEFT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(7),
             "REE_AE4 - preventive",
             "REE_AE4 - preventive",
             "0478c207-c766-11e1-8775-005056c00008",
-            PREVENTIVE, null,
+            "preventive", null,
             +1000d, -1000d, Side.RIGHT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(8),
             "REE_AE5 - REE_CO4 - curative",
             "REE_AE5 - REE_CO4 - curative",
             "048badc5-c766-11e1-8775-005056c00008",
-            CURATIVE, "9d17b84c-33b5-4a68-b8b9-ed5b31038d40",
+            "curative", "9d17b84c-33b5-4a68-b8b9-ed5b31038d40",
             +1000d, -1000d, Side.LEFT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(9),
             "REE_AE5 - preventive",
             "REE_AE5 - preventive",
             "048badc5-c766-11e1-8775-005056c00008",
-            PREVENTIVE, null,
+            "preventive", null,
             +1000d, -1000d, Side.LEFT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(10),
             "REE_AE6 - REE_CO5 - curative",
             "REE_AE6 - REE_CO5 - curative",
             "044a5f09-c766-11e1-8775-005056c00008",
-            CURATIVE, "96c96ad8-844c-4f3b-8b38-c886ba2c0214",
+            "curative", "96c96ad8-844c-4f3b-8b38-c886ba2c0214",
             +2000d, -2000d, Side.LEFT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(11),
             "REE_AE6 - preventive",
             "REE_AE6 - preventive",
             "044a5f09-c766-11e1-8775-005056c00008",
-            PREVENTIVE, null,
+            "preventive", null,
             +2000d, -2000d, Side.LEFT);
     }
 
@@ -351,25 +351,25 @@ class FlowCnecCreationTest {
             "REE_AE3 - preventive",
             "REE_AE3 - preventive",
             "048badc5-c766-11e1-8775-005056c00008",
-            PREVENTIVE, null,
+            "preventive", null,
             +500d, -500d, Side.LEFT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(1),
             "REE_AE4 - preventive",
             "REE_AE4 - preventive",
             "0478c207-c766-11e1-8775-005056c00008",
-            PREVENTIVE, null,
+            "preventive", null,
             +1000d, -1000d, Side.RIGHT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(2),
             "REE_AE5 - preventive",
             "REE_AE5 - preventive",
             "048badc5-c766-11e1-8775-005056c00008",
-            PREVENTIVE, null,
+            "preventive", null,
             +1000d, -1000d, Side.LEFT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(3),
             "REE_AE6 - preventive",
             "REE_AE6 - preventive",
             "044a5f09-c766-11e1-8775-005056c00008",
-            PREVENTIVE, null,
+            "preventive", null,
             +2000.0, -2000.0, Side.LEFT);
     }
 
@@ -390,25 +390,25 @@ class FlowCnecCreationTest {
             "ELIA_AE1 - ELIA_CO1 - curative",
             "ELIA_AE1 - ELIA_CO1 - curative",
             "ffbabc27-1ccd-4fdc-b037-e341706c8d29",
-            CURATIVE, "493480ba-93c3-426e-bee5-347d8dda3749",
+            "curative", "493480ba-93c3-426e-bee5-347d8dda3749",
             +1312d, -1312d, Side.LEFT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(1),
             "ELIA_AE1 - preventive",
             "ELIA_AE1 - preventive",
             "ffbabc27-1ccd-4fdc-b037-e341706c8d29",
-            PREVENTIVE, null,
+            "preventive", null,
             +1312d, -1312d, Side.LEFT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(2),
             "TENNET_TSO_AE1NL - TENNET_TSO_CO1 - curative",
             "TENNET_TSO_AE1NL - TENNET_TSO_CO1 - curative",
             "b18cd1aa-7808-49b9-a7cf-605eaf07b006 + e8acf6b6-99cb-45ad-b8dc-16c7866a4ddc",
-            CURATIVE, "c0a25fd7-eee0-4191-98a5-71a74469d36e",
+            "curative", "c0a25fd7-eee0-4191-98a5-71a74469d36e",
             +1876d, -1876d, Side.RIGHT);
         CsaProfileCracCreationTestUtil.assertFlowCnecEquality(listFlowCnecs.get(3),
             "TENNET_TSO_AE1NL - preventive",
             "TENNET_TSO_AE1NL - preventive",
             "b18cd1aa-7808-49b9-a7cf-605eaf07b006 + e8acf6b6-99cb-45ad-b8dc-16c7866a4ddc",
-            PREVENTIVE, null,
+            "preventive", null,
             +1876d, -1876d, Side.RIGHT);
     }
 }
